# BMFS

./: .gitignore  .travis.yml  BareMetal File System.md  CMakeLists.txt  COPYING  Doxyfile  LICENSE  Makefile  Makefile.am  README.md  bmfs  bmfs.c  build.sh  clean.sh  configure.ac  install.sh  stamp.h
.github/workflows/: main.yml
bash/: common.sh
cmake/: MinGWToolchain.cmake
doc/: BareMetal File System Lite.md  BareMetal File System.md  Terminology.md
doc/doxygen/: mainpage.h
include/bmfs/: Makefile  bmfs.h  cache.h  cipher.h  dir.h  disk.h  encoding.h  entry.h  errno.h  explorer.h  file.h  filedisk.h  fs.h  header.h  host.h  limits.h  path.h  ramdisk.h  size.h  sspec.h  status.h  stdhost.h  stdlib.h  table.h  time.h  types.h  version.h
lib/: CMakeLists.txt  Makefile  build.sh  clean.sh  crc32.c  crc32.h  dir.c  disk.c  encoding.c  entry.c  errno.c  file.c  filedisk.c  fs.c  header.c  host.c  memcpy.c  memcpy.h  path.c  ramdisk.c  size.c  sspec.c  status.c  stdhost.c  stdlib.c  table.c  time.c
make/: config.mk  cross-config.mk  full-config.mk  patterns.mk
src/: CMakeLists.txt  Makefile  Makefile.am  bmfs-cat.c  bmfs-cp.c  bmfs-create.c  bmfs-fuse.c  bmfs-init.c  bmfs-ls.c  bmfs-rm.c  bmfs.c  bmfs.h  bmfslite.c  build.sh  clean.sh  dir-test.c  dir.c  dir.h  disk-test.c  disk.c  disk.h  entry.c  entry.h  explorer-test.c  explorer.c  libbmfs.c  libbmfs.h  limits.h  path-test.c  path.c  ramdisk.c  size-test.c  sspec-test.c  sspec.c  sspec.h  stdlib.c  stdlib.h  version.h
tests/: CMakeLists.txt  Makefile  assert.h  dir-test.c  dir.c  disk-test.c  disk.c  encoding-test.c  fs-test.c  fs.c  path-test.c  path.c  size-test.c  size.c  sizeof-test.c  sspec-test.c  table-test.c  table.c
travis-ci/: do-all-builds.bash  do-cmake-build.bash  do-make-build.bash  do-sh-build.sh
utils/: CMakeLists.txt  Makefile  bmfs-create.c  bmfs-fuse.c  bmfs-init.c  bmfs.c  build.sh  clean.sh
